--- a/views/sign/forgot_password.erb
+++ b/views/sign/forgot_password.erb
@@ -3,14 +3,14 @@
         <div class="card-header"><h3 class="text-center font-weight-light my-4">Password Recovery</h3></div>
         <div class="card-body">
             <div class="small mb-3 text-muted">Enter your email address and we will send you a link to reset your password.</div>
-            <form>
+            <form action="/forgot_password" method="post">
                 <div class="form-floating mb-3">
-                    <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                    <label for="inputEmail">Email address</label>
+                    <input class="form-control" id="email" type="email" name="email" placeholder="Enter Yor Email" />
+                    <label for="email">Email address</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="/login">Return to login</a>
-                    <a class="btn btn-primary" href="/reset_password">Reset Password</a>
+                    <button type="submit" class="btn btn-primary">Reset Password</button>
                 </div>
             </form>
         </div>
