--- a/views/sign/reset_password.erb
+++ b/views/sign/reset_password.erb
@@ -11,17 +11,20 @@
                 </div>
                 <% end %>
             <% end %>
-            <form action="/forgot_password" method="post">
+            <form action="/reset_password" method="post">
                 <div class="row mb-3">
+                    <div class="col-md-12">
+                        <input class="form-control" nama="reset_token" type="hidden" value="<%= @reset_token %>" />
+                    </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3 mb-md-0">
-                            <input class="form-control" id="password" type="password" name="password" placeholder="Enter New Password" />
+                            <input class="form-control" id="password" type="password" name="password" placeholder="Enter New Password" value="<%= params[:password]%>" />
                             <label for="password">New Password</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="re_password" type="re_password" name="re_password" placeholder="Confirm new Password" />
+                            <input class="form-control" id="re_password" type="password" name="re_password" placeholder="Confirm new Password" value="<%= params[:re_password]%>" />
                             <label for="re_password">Re Password</label>
                         </div>
                     </div>
