--- a/views/sign/reset_password.erb
+++ b/views/sign/reset_password.erb
@@ -14,7 +14,7 @@
             <form action="/reset_password" method="post">
                 <div class="row mb-3">
                     <div class="col-md-12">
-                        <input class="form-control" nama="reset_token" type="hidden" value="<%= @reset_token %>" />
+                        <input class="form-control" name="reset_token" type="hidden" value="<%= @reset_token %>" />
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3 mb-md-0">
