--- a/views/layouts/seller/template.erb
+++ b/views/layouts/seller/template.erb
@@ -29,7 +29,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Admin</a></li>
-                <li><a class="dropdown-item" href="#">User</a></li>
+                <li><a class="dropdown-item" href="/user_profile">User</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="/seller_profile">Seller</a></li>
               </ul>
