--- a/views/seller/profile/view.erb
+++ b/views/seller/profile/view.erb
@@ -66,9 +66,9 @@
                 </div>
             </div>
             <!-- Edit Button -->
-            <a class="btn btn-outline-success float-end" href="/admin_edit_profile/<%= current_user['user_id'] %>">Edit My Profile</a>
+            <a class="btn btn-outline-success float-end" href="#">Edit My Profile</a>
             <!-- Back Button -->
-            <a class="btn btn-outline-secondary float-start" href="/admin"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/> Back</a>
+            <a class="btn btn-outline-secondary float-start" href="#"><img src="/uploads/items/arrow-left-circle.svg" width="30px"/></a>
         </div>
     </div>
 </div>
