--- a/views/user/profile/view.erb
+++ b/views/user/profile/view.erb
@@ -7,17 +7,9 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                             <div class="mb-3 row">
-                                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                                <label for="name" class="col-sm-2 col-form-label">Name</label>
                                 <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="email" value="tamtama@gmail.com">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="Name" class="col-sm-2 col-form-label">Name</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="Name" value="Tamtama">
+                                    <input type="text" readonly class="form-control-plaintext" id="name" value="<%= @profile['name'] %>">
                                 </div>
                             </div>
                         </li>
@@ -25,7 +17,31 @@
                             <div class="mb-3 row">
                                 <label for="username" class="col-sm-2 col-form-label">Username</label>
                                 <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="username" value="tamtama">
+                                    <input type="text" readonly class="form-control-plaintext" id="username" value="<%= @profile['username']%>">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="mb-3 row">
+                                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="text" readonly class="form-control-plaintext" id="email" value="<%= @profile['email'] %>">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="mb-3 row">
+                                <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
+                                <div class="col-sm-10">
+                                    <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @profile['birthdate']%>">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="mb-3 row">
+                                <label for="age" class="col-sm-2 col-form-label">Age</label>
+                                <div class="col-sm-10">
+                                    <input type="text" readonly class="form-control-plaintext" id="age" value="<%= @profile['age']%>">
                                 </div>
                             </div>
                         </li>
