--- a/views/user/profile/edit.erb
+++ b/views/user/profile/edit.erb
@@ -41,22 +41,22 @@
                             <div class="mb-3 row">
                                 <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="birthdate" value="<%= @profile['birthdate']%>">
+                                    <input type="date" class="form-control" id="birthdate" value="<%= @profile['birthdate']%>">
                                 </div>
                             </div>
                         </li>
                         <li class="list-group-item">
                             <div class="mb-3 row">
-                                <label for="age" class="col-sm-2 col-form-label">Age</label>
+                                <label for="address" class="col-sm-2 col-form-label">Address</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="age" value="<%= @profile['age']%>">
+                                    <textarea type="text" class="form-control" id="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-danger float-start">Back</a>
+                    <a href="/user_profile/<%= current_user['user_id'] %>" class="btn btn-danger float-start">Back</a>
                     <button class="btn btn-success float-end">Submit</button>
                 </div>
             </div>     
