--- a/views/user/profile/view.erb
+++ b/views/user/profile/view.erb
@@ -4,56 +4,65 @@
             <div class="card border-secondary">
                 <div class="card-header">User Profile View</div>
                 <div class="card-body">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="name" class="col-sm-2 col-form-label">Name</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="name" value="<%= @profile['name'] %>">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="username" class="col-sm-2 col-form-label">Username</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="username" value="<%= @profile['username']%>">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="email" class="col-sm-2 col-form-label">Email</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="email" value="<%= @profile['email'] %>">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= @profile['phone'] %>">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @profile['birthdate']%>">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="mb-3 row">
-                                <label for="age" class="col-sm-2 col-form-label">Age</label>
-                                <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="age" value="<%= @profile['age']%>">
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <% if @profile['photo'] %>
+                                <img src="/uploads/users/<%= @profile['photo'] %>" class="img-fluid rounded-start" alt="<%= @profile['username']%>">
+                            <% end %>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="name" class="col-sm-2 col-form-label">Name</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="name" value="<%= @profile['name'] %>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="username" class="col-sm-2 col-form-label">Username</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="username" value="<%= @profile['username']%>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="email" class="col-sm-2 col-form-label">Email</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="email" value="<%= @profile['email'] %>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= @profile['phone'] %>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @profile['birthdate']%>">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+                                    <div class="mb-3 row">
+                                        <label for="age" class="col-sm-2 col-form-label">Age</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" readonly class="form-control-plaintext" id="age" value="<%= @profile['age']%>">
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-footer">
                     <a href="/user_profile_edit/<%= current_user['user_id'] %>" class="btn btn-success float-end">Edit My Profile</a>
