--- a/views/seller/profile/edit.erb
+++ b/views/seller/profile/edit.erb
@@ -66,7 +66,8 @@
                 </div>
             </div>
             <!-- Edit Button -->
-            <a href="/user_profile_edit" class="btn btn-outline-success float-end">Edit My Profile</a>
+            <button href="#" class="btn btn-outline-success float-end">Edit My Profile</button>
+            <a href="/seller_profile_view" class="btn btn-outline-success float-start">Back</a>
         </div>
     </div>
 </div>
