--- a/views/seller/profile/view.erb
+++ b/views/seller/profile/view.erb
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <!-- Edit Button -->
-            <a href="/editan" class="btn btn-outline-success float-end">Edit My Profile</a>
+            <a href="/seller_profile_edit/<%= @current_user['user_id'] %>" class="btn btn-outline-success float-end">Edit My Profile</a>
         </div>
     </div>
 </div>
